Fixe scrollbar bug

--- a/app.css
+++ b/app.css
@@ -1,6 +1,8 @@
 body {
     background-color: #FFF9F0;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .outter-container {
